# wwjson

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README-en.md  README.md  makefile  task_log.md  task_todo.md
.agents/commands/: pop.md
.github/workflows/: ci-example.yml  ci-mini.yml  ci-perf.yml  ci-unit.yml  ci.yml  docs.yml
changelog/v1.0/: task_log.md  task_todo.md
changelog/v1.1/: task_log.md  task_todo.md
docs/: build.sh  index.md  makefile  pandoc-gen.sh  template.html  usage.md
docs/template/: default.html  remove-chinese-whitespace.lua  style.css  toc.js
example/: CMakeLists.txt  README.md  estimate_size.cpp  hex_json.cpp  struct_to_json.cpp
example/fetch_content/: CMakeLists.txt
example/find_package/: CMakeLists.txt
include/: external.hpp  itoa.hpp  jbuilder.hpp  jstring.hpp  wwjson.hpp
perf/: CMakeLists.txt  README.md  argv.h  cases.md  extract-perf-log.pl  p_api.cpp  p_builder.cpp  p_design.cpp  p_external.cpp  p_itoa.cpp  p_nodom.cpp  p_number.cpp  p_string.cpp  perf_util.cpp  perf_util.h  relative_perf.h  report.md  run-ci.sh  test_data.cpp  test_data.h  tic_builder.cpp  tic_number.cpp  tic_string.cpp
perf/mini/: Makefile  README.md  builder.cpp  dyn_json.cpp  itoa_back.cpp  itoa_u16.cpp  itoa_u32.cpp  itoa_u64.cpp  itoa_u8.cpp
utest/: CMakeLists.txt  README.md  cases.md  custom_string.cpp  custom_string.h  t_advance.cpp  t_basic.cpp  t_bufferview.cpp  t_custom.cpp  t_escape.cpp  t_experiment.cpp  t_itoa.cpp  t_jbuilder.cpp  t_jstring.cpp  t_number.cpp  t_operator.cpp  t_scope.cpp  t_usage.cpp  test_util.cpp  test_util.h
